--- a/pom.xml
+++ b/pom.xml
@@ -60,6 +60,15 @@
             <artifactId>jaxb-runtime</artifactId>
             <version>4.0.5</version>
         </dependency>
+
+        <!-- TESTS -->
+
+        <dependency>
+          <groupId>org.junit.jupiter</groupId>
+          <artifactId>junit-jupiter-engine</artifactId>
+          <version>5.5.2</version>
+          <scope>test</scope>
+        </dependency>
     </dependencies>
     <build>
         <finalName>ApuracaoVotos</finalName>
@@ -72,6 +81,12 @@
                     <failOnMissingWebXml>false</failOnMissingWebXml>
                 </configuration>
             </plugin>
+
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <version>3.0.0-M3</version>
+          </plugin>
         </plugins>
     </build>
 </project>
